# json-repair-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/prompts/: api-reviewer.md  explore-harness.md  information-architect.md  performance-reviewer.md  product-analyst.md  product-manager.md  qa-tester.md  quality-reviewer.md  quality-strategist.md  sisyphus-lite.md  style-reviewer.md  team-orchestrator.md  ux-researcher.md
.codex/skills/ai-slop-cleaner/: SKILL.md
.codex/skills/omx-setup/: SKILL.md
.codex/skills/ralph/: SKILL.md
.codex/skills/team/: SKILL.md
.codex/skills/ultragoal/: SKILL.md
src/: lib.rs  main.rs
tests/: compat.rs
