[package]
name = "json-repair-rs"
version = "0.1.0"
edition = "2024"
description = "Repair malformed JSON strings from LLMs, logs, and user input"
license = "Apache-2.0"
repository = "https://github.com/zchee/json-repair-rs"

[lib]
name = "json_repair_rs"
path = "src/lib.rs"

[[bin]]
name = "json-repair-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"
